--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,21 @@
 {
   "extends": "@apify/tsconfig",
   "compilerOptions": {
-    "module": "ES2022",
+    "module": "esnext",
+    //    "module": "ES2022",
     "target": "ES2022",
     "outDir": "dist",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "noUnusedLocals": false,
     "skipLibCheck": true,
-    "lib": ["DOM"],
+    "lib": [
+      "DOM"
+    ],
     "strict": true,
   },
-  "include": ["./src/**/*", "config.ts"]
+  "include": [
+    "./src/**/*",
+    "config.ts"
+  ]
 }
